--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts"
+    "start": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:create": "cross-var npm run typeorm migration:create",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "cross-var": "^1.1.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -34,8 +38,12 @@
     "express": "^4.18.3",
     "fast-csv": "^5.0.1",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
+    "tsyringe": "^4.8.0",
+    "typeorm": "^0.3.20",
     "typescript": "^5.4.3",
     "uuid": "^9.0.1"
   }
